Improved similarity calculation, added similarity functions

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,24 +350,7 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Similarity functions\n",
-    "\n",
-    "def euclidean_distance():\n",
-    "    pass\n",
-    "\n",
-    "def manhattan_distance():\n",
-    "    pass\n",
-    "\n",
-    "def cosine_similarity():\n",
-    "    pass\n",
-    "\n",
-    "def jaccard_similarity():\n",
-    "    pass\n",
-    "\n",
-    "def hamming_distance():\n",
-    "    pass\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -378,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,57 +383,39 @@
     "        df_input_rgb = df_input[['ID', 'RGB_Histogram']]\n",
     "\n",
     "        if similarity == \"euclidean_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, euclidean_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, 'euclidean', best_n)\n",
     "\n",
     "        elif similarity == \"manhattan_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, manhattan_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, 'cityblock', best_n)\n",
     "\n",
     "        elif similarity == \"cosine_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, cosine_similarity, best_n)\n",
-    "\n",
-    "        elif similarity == \"jaccard_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, jaccard_similarity, best_n)\n",
-    "\n",
-    "        elif similarity == \"hamming_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, hamming_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, 'cosine', best_n)\n",
     "\n",
     "\n",
     "    elif measurement == \"HSV\":\n",
     "        df_input_hsv = df_input[['ID', 'HSV_Histogram']] \n",
     "\n",
     "        if similarity == \"euclidean_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, euclidean_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, 'euclidean', best_n)\n",
     "\n",
     "        elif similarity == \"manhattan_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, manhattan_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, 'cityblock', best_n)\n",
     "\n",
     "        elif similarity == \"cosine_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, cosine_similarity, best_n)\n",
-    "\n",
-    "        elif similarity == \"jaccard_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, jaccard_similarity, best_n)\n",
-    "\n",
-    "        elif similarity == \"hamming_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, hamming_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, 'cosine', best_n)\n",
     "\n",
     "\n",
     "    elif measurement == \"Embedding\":\n",
     "        df_input_embedding = df_input[['ID', 'Model_Embedding']]\n",
     "\n",
     "        if similarity == \"euclidean_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, euclidean_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, 'euclidean', best_n)\n",
     "\n",
     "        elif similarity == \"manhattan_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, manhattan_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, 'cityblock', best_n)\n",
     "\n",
     "        elif similarity == \"cosine_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, cosine_similarity, best_n)\n",
-    "\n",
-    "        elif similarity == \"jaccard_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, jaccard_similarity, best_n)\n",
-    "\n",
-    "        elif similarity == \"hamming_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, hamming_distance, best_n)\n",
+    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, 'cosine', best_n)\n",
     "            \n",
     "   \n",
     "    return similarity_ids"
@@ -458,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,20 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Just for testing, not right\n",
-    "def euclidean_distance(features1, features2):\n",
-    "    arr1 = np.array(features1)\n",
-    "    arr2 = np.array(features2)\n",
-    "    return np.sqrt(np.sum((arr1 - arr2) ** 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,52 +476,163 @@
     "# Creates a new df with the ID, similarity value per input image (and the mean)\n",
     "\n",
     "def calculate_mean_similarity(df_input_measurements, df_comparison_data, similarity_function, best_n):\n",
-    "    similarity_results = pd.DataFrame(columns=['ID'] + list(df_input_measurements['ID']))\n",
+    "    input_ids = df_input_measurements['ID'].values\n",
+    "    comparison_ids = df_comparison_data['ID'].values\n",
+    "    \n",
+    "    # Extract the histogram columns by dropping the 'ID' column\n",
+    "    input_histogram_column = df_input_measurements.drop(columns=['ID']).columns[0]\n",
+    "    comparison_histogram_column = df_comparison_data.drop(columns=['ID']).columns[0]\n",
+    "    \n",
+    "    # Convert histogram columns to numeric arrays\n",
+    "    input_features = np.vstack(df_input_measurements[input_histogram_column].values)\n",
+    "    comparison_features = np.vstack(df_comparison_data[comparison_histogram_column].values)\n",
+    "    \n",
+    "    # Calculate similarity for each pair (rows)\n",
+    "    similarity_matrix = cdist(comparison_features, input_features, metric=similarity_function)\n",
+    "    \n",
+    "    similarity_results = pd.DataFrame(similarity_matrix, columns=input_ids)\n",
+    "    \n",
+    "    # Add ID column and order columns\n",
     "    similarity_results['ID'] = df_comparison_data['ID']\n",
+    "    similarity_results = similarity_results[['ID'] + list(input_ids)]\n",
+    "    \n",
+    "    \n",
     "    print(similarity_results)\n",
-    "    \n",
-    "    # Select data from input image\n",
-    "    for _, input_row in df_input_measurements.iterrows():\n",
-    "        input_id = input_row['ID']\n",
-    "        input_features = input_row.drop('ID').tolist()\n",
-    "        \n",
-    "        # Select data from comparison image\n",
-    "        for _, comparison_row in df_comparison_data.iterrows():\n",
-    "            comparison_id = comparison_row['ID']\n",
-    "            comparison_features = comparison_row.drop('ID').tolist()\n",
-    "            \n",
-    "            # Calculate similarity between measurements\n",
-    "            similarity = similarity_function(input_features, comparison_features)\n",
-    "            \n",
-    "\n",
-    "            # Put into df (-1 because index starts at 0, IDs do not)\n",
-    "            similarity_results.at[comparison_id - 1, input_id] = similarity\n",
-    "    \n",
-    "    \n",
     "    # Calculate mean\n",
-    "    num_input_rows = len(df_input_measurements)\n",
-    "    if num_input_rows > 1:   \n",
+    "    if len(input_ids) > 1:\n",
     "        similarity_results['Mean'] = similarity_results.drop(columns=['ID']).mean(axis=1)\n",
-    "        sort_column = 'Mean'\n",
-    "        print(similarity_results)\n",
-    "        \n",
+    "        sorted_results = similarity_results.sort_values(by='Mean', ascending=True)\n",
+    "        print(sorted_results)\n",
     "    else:\n",
-    "        sort_column = input_id\n",
-    "        print(similarity_results)   \n",
-    "    \n",
-    "    # Decide which sorting (asc or desc)\n",
-    "    if similarity_function in [euclidean_distance]:#, manhattan_distance, hamming_distance]:\n",
-    "        ascending = True # ascending\n",
-    "    #elif similarity_function in [cosine_similarity, jaccard_similarity]:\n",
-    "    #    ascending = False # descending\n",
-    "    \n",
-    "    # Sort\n",
-    "    sorted_results = similarity_results.sort_values(by=sort_column, ascending=ascending)\n",
-    "    \n",
+    "        sorted_results = similarity_results.sort_values(by=input_ids[0], ascending=True)\n",
+    "        print(sorted_results)\n",
+    "\n",
     "    print(sorted_results)\n",
-    "    \n",
+    "\n",
     "    # Return just a list with the best n similarities\n",
-    "    return sorted_results.head(best_n)['ID'].tolist()\n"
+    "    best_ids = sorted_results.head(best_n)['ID'].tolist()\n",
+    "    return best_ids\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for testing\n",
+    "input_images = [r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_5.jpg\"]\n",
+    "\n",
+    "input5_images = [\n",
+    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_1.jpg\",\n",
+    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_2.jpg\",\n",
+    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_3.jpg\",\n",
+    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_4.jpg\",\n",
+    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_5.jpg\"\n",
+    "]\n",
+    "details_list = [extract_image_details(444668 + i + 1, path, (224,224)) for i, path in enumerate(input5_images)]\n",
+    "details_list = [features for features in details_list if features is not None]\n",
+    "df_input = pd.DataFrame(details_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            ID    444669    444670    444671    444672    444673\n",
+      "0            1  1.183939  1.243163  1.185785  1.181971  1.032262\n",
+      "1            2  1.344687  1.066286  0.931049  1.133454  1.325159\n",
+      "2            3  1.347956  1.221579  0.834074  0.894161  1.325456\n",
+      "3            4  1.394265  1.217573  1.340675  1.333659  1.407875\n",
+      "4            5  1.395585  1.273755  1.068205  0.901817  1.403537\n",
+      "...        ...       ...       ...       ...       ...       ...\n",
+      "444663  444664  1.401564  1.242506  1.023134  1.258934  1.409212\n",
+      "444664  444665  0.841186  1.248709  0.885491  0.966981  0.883026\n",
+      "444665  444666  1.300419  1.108678  0.829039  1.016569  1.260190\n",
+      "444666  444667  1.076689  1.044201  0.772955  0.934034  0.831976\n",
+      "444667  444668  1.367174  0.998380  0.649152  0.964654  1.353416\n",
+      "\n",
+      "[444668 rows x 6 columns]\n",
+      "            ID    444669    444670    444671    444672    444673      Mean\n",
+      "155624  155625  0.935345  1.123147  0.685054  0.778539  0.720782  0.848574\n",
+      "274538  274539  0.837919  1.206532  0.878451  0.853169  0.483701  0.851954\n",
+      "274128  274129  0.905759  1.100830  0.753844  0.812806  0.699707  0.854589\n",
+      "355826  355827  0.877761  1.185055  0.776507  0.844086  0.605871  0.857856\n",
+      "14076    14077  0.910893  1.114740  0.764046  0.852638  0.651694  0.858802\n",
+      "...        ...       ...       ...       ...       ...       ...       ...\n",
+      "438016  438017  1.414113  1.413950  1.414066  1.414182  1.414207  1.414104\n",
+      "362427  362428  1.413866  1.414214  1.414211  1.414201  1.414213  1.414141\n",
+      "309556  309557  1.414080  1.414213  1.414185  1.414204  1.414214  1.414179\n",
+      "385668  385669  1.414138  1.414136  1.414214  1.414214  1.414214  1.414183\n",
+      "260716  260717  1.414138  1.414142  1.414214  1.414214  1.414214  1.414184\n",
+      "\n",
+      "[444668 rows x 7 columns]\n",
+      "            ID    444669    444670    444671    444672    444673      Mean\n",
+      "155624  155625  0.935345  1.123147  0.685054  0.778539  0.720782  0.848574\n",
+      "274538  274539  0.837919  1.206532  0.878451  0.853169  0.483701  0.851954\n",
+      "274128  274129  0.905759  1.100830  0.753844  0.812806  0.699707  0.854589\n",
+      "355826  355827  0.877761  1.185055  0.776507  0.844086  0.605871  0.857856\n",
+      "14076    14077  0.910893  1.114740  0.764046  0.852638  0.651694  0.858802\n",
+      "...        ...       ...       ...       ...       ...       ...       ...\n",
+      "438016  438017  1.414113  1.413950  1.414066  1.414182  1.414207  1.414104\n",
+      "362427  362428  1.413866  1.414214  1.414211  1.414201  1.414213  1.414141\n",
+      "309556  309557  1.414080  1.414213  1.414185  1.414204  1.414214  1.414179\n",
+      "385668  385669  1.414138  1.414136  1.414214  1.414214  1.414214  1.414183\n",
+      "260716  260717  1.414138  1.414142  1.414214  1.414214  1.414214  1.414184\n",
+      "\n",
+      "[444668 rows x 7 columns]\n",
+      "CPU times: total: 1.58 s\n",
+      "Wall time: 1.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "id_list = find_similar_ids(\"RGB\", \"euclidean_distance\", df_input, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[155625, 274539, 274129, 355827, 14077]"
+      ]
+     },
+     "execution_count": 330,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1280\n",
+      "512\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(embedding_df.iloc[0]['Embedding']))\n",
+    "print(len(rgb_df.iloc[0]['Histogram']))"
    ]
   },
   {
@@ -932,6 +995,13 @@
    "source": [
     "right_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
