Simplified decision function, small corrections

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -24,6 +24,7 @@
     "from concurrent.futures import ProcessPoolExecutor\n",
     "\n",
     "from scipy.spatial import distance\n",
+    "from scipy.spatial.distance import cdist\n",
     "from sklearn.metrics import pairwise\n",
     "import time\n",
     "import sqlite3\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,53 +378,40 @@
     "\n",
     "\n",
     "def find_similar_ids(measurement, similarity, df_input, best_n):\n",
-    "    similarity_ids = []\n",
+    "    similarity_functions = {\n",
+    "        \"euclidean_distance\": \"euclidean\",\n",
+    "        \"manhattan_distance\": \"cityblock\",\n",
+    "        \"cosine_similarity\": \"cosine\"\n",
+    "    }\n",
+    "    \n",
+    "    histogram_columns = {\n",
+    "        \"RGB\": \"RGB_Histogram\",\n",
+    "        \"HSV\": \"HSV_Histogram\",\n",
+    "        \"Embedding\": \"Model_Embedding\"\n",
+    "    }\n",
+    "    \n",
+    "    dataframes = {\n",
+    "        \"RGB\": rgb_df,\n",
+    "        \"HSV\": hsv_df,\n",
+    "        \"Embedding\": embedding_df\n",
+    "    }\n",
+    "    \n",
+    "    # Create new input-df with the needed column\n",
+    "    df_input_selected = df_input[[\"ID\", histogram_columns[measurement]]]\n",
+    "    \n",
+    "    # Select needed comparison-df\n",
+    "    target_df = dataframes[measurement]\n",
+    "    \n",
+    "    # Select comparison function\n",
+    "    similarity_function = similarity_functions[similarity]\n",
     "\n",
-    "    if measurement == \"RGB\":\n",
-    "        df_input_rgb = df_input[['ID', 'RGB_Histogram']]\n",
-    "\n",
-    "        if similarity == \"euclidean_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, 'euclidean', best_n)\n",
-    "\n",
-    "        elif similarity == \"manhattan_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, 'cityblock', best_n)\n",
-    "\n",
-    "        elif similarity == \"cosine_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_rgb, rgb_df, 'cosine', best_n)\n",
-    "\n",
-    "\n",
-    "    elif measurement == \"HSV\":\n",
-    "        df_input_hsv = df_input[['ID', 'HSV_Histogram']] \n",
-    "\n",
-    "        if similarity == \"euclidean_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, 'euclidean', best_n)\n",
-    "\n",
-    "        elif similarity == \"manhattan_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, 'cityblock', best_n)\n",
-    "\n",
-    "        elif similarity == \"cosine_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_hsv, hsv_df, 'cosine', best_n)\n",
-    "\n",
-    "\n",
-    "    elif measurement == \"Embedding\":\n",
-    "        df_input_embedding = df_input[['ID', 'Model_Embedding']]\n",
-    "\n",
-    "        if similarity == \"euclidean_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, 'euclidean', best_n)\n",
-    "\n",
-    "        elif similarity == \"manhattan_distance\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, 'cityblock', best_n)\n",
-    "\n",
-    "        elif similarity == \"cosine_similarity\":\n",
-    "            similarity_ids = calculate_mean_similarity(df_input_embedding, embedding_df, 'cosine', best_n)\n",
-    "            \n",
-    "   \n",
+    "    similarity_ids = calculate_mean_similarity(df_input_selected, target_df, similarity_function, best_n)\n",
     "    return similarity_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,11 +504,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# for testing\n",
+    "rgb_df, hsv_df, embedding_df, path_df, other_data_df = load_pickles()\n",
+    "load_embedding_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for testing\n",
+    "\n",
     "input_images = [r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_5.jpg\"]\n",
     "\n",
     "input5_images = [\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -586,8 +586,8 @@
       "260716  260717  1.414138  1.414142  1.414214  1.414214  1.414214  1.414184\n",
       "\n",
       "[444668 rows x 7 columns]\n",
-      "CPU times: total: 1.58 s\n",
-      "Wall time: 1.7 s\n"
+      "CPU times: total: 1.72 s\n",
+      "Wall time: 1.73 s\n"
      ]
     }
    ],
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "[155625, 274539, 274129, 355827, 14077]"
       ]
      },
-     "execution_count": 330,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
