Solved batch-generator error, improved correct_data, changed similarity-func names, individual amount inputs/results

--- a/ImageLoader.ipynb
+++ b/ImageLoader.ipynb
@@ -220,10 +220,18 @@
     "    total_batches = (len(image_files) - start_index + batch_size - 1) // batch_size # - start_index to display remaining batches correctly\n",
     "    progress_bar = tqdm(total=total_batches, desc=\"Processing images\") if show_progress else None\n",
     "\n",
+    "    current_id = start_index + 1\n",
+    "    \n",
     "    for index in range(start_index, len(image_files), batch_size):\n",
     "        batch = image_files[index:index + batch_size]\n",
-    "        details_list = [extract_image_details(index + i + 1, path, resize_size) for i, path in enumerate(batch)]\n",
-    "        details_list = [features for features in details_list if features is not None]\n",
+    "        details_list = []\n",
+    "        \n",
+    "        for i, path in enumerate(batch):\n",
+    "            features = extract_image_details(current_id, path, resize_size)\n",
+    "            if features is not None:\n",
+    "                details_list.append(features)\n",
+    "                current_id += 1 # Increase only if an image has been successfully read\n",
+    "                \n",
     "        df = pd.DataFrame(details_list)\n",
     "        yield df, index + batch_size\n",
     "        if show_progress:\n",
@@ -360,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,9 +385,9 @@
     "\n",
     "def find_similar_ids(measurement, similarity, df_input, best_n):\n",
     "    similarity_functions = {\n",
-    "        \"euclidean_distance\": \"euclidean\",\n",
-    "        \"manhattan_distance\": \"cityblock\",\n",
-    "        \"cosine_similarity\": \"cosine\"\n",
+    "        \"euclidean\": \"euclidean\",\n",
+    "        \"manhattan\": \"cityblock\",\n",
+    "        \"cosine\": \"cosine\"\n",
     "    }\n",
     "    \n",
     "    histogram_columns = {\n",
@@ -409,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,33 +436,44 @@
     "    return result_paths\n",
     "\n",
     "\n",
-    "def print_images(input_images, result_paths, input_images_number, similarities):\n",
+    "def print_images(input_images, result_paths, similarities, best_n):\n",
+    "    input_images_number = len(input_images)\n",
+    "    max_images = max(input_images_number, best_n)\n",
+    "    figsize = (20, 5)\n",
+    "    \n",
     "    # Subplots to plot input(s) and results\n",
-    "    fig, axes = plt.subplots(2, 5, figsize=(20, 5))\n",
+    "    # First row\n",
+    "    fig, axes = plt.subplots(1, max_images, figsize=figsize)\n",
+    "    \n",
+    "    for i in range(input_images_number):\n",
+    "        image = Image.open(input_images.iloc[i, 1])\n",
+    "        axes[i].imshow(image)\n",
+    "        axes[i].set_title(f\"Input: {i+1}\")\n",
+    "        axes[i].axis('off')\n",
+    "    \n",
+    "    # Fill remaining axes with empty plots if needed\n",
+    "    for i in range(input_images_number, max_images):\n",
+    "        axes[i].axis('off')\n",
     "\n",
-    "    # Input(s)\n",
-    "    for i in range(5):\n",
-    "        if i < input_images_number:\n",
-    "            image = Image.open(input_images[i])\n",
-    "            axes[0, i].imshow(image)\n",
-    "            axes[0, i].set_title(f\"Input: {i+1}\")\n",
-    "        axes[0, i].axis('off')\n",
+    "    # Second row    \n",
+    "    fig, axes = plt.subplots(1, max_images, figsize=figsize)\n",
     "\n",
-    "    # Results\n",
-    "    for i in range(5):\n",
-    "        if i < 5:\n",
-    "            image = Image.open(result_paths[i])\n",
-    "            axes[1, i].imshow(image)\n",
-    "            axes[1, i].set_title(f\"Result ID: {similarities[i]}\")\n",
-    "        axes[1, i].axis('off')\n",
+    "    for i in range(best_n):\n",
+    "        image = Image.open(result_paths[i])\n",
+    "        axes[i].imshow(image)\n",
+    "        axes[i].set_title(f\"Result ID: {similarities[i]}\")\n",
+    "        axes[i].axis('off')\n",
+    "    \n",
+    "    # Fill remaining axes with empty plots if needed\n",
+    "    for i in range(best_n, max_images):\n",
+    "        axes[i].axis('off')\n",
     "\n",
-    "    #plt.tight_layout()\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,18 +501,18 @@
     "    similarity_results['ID'] = df_comparison_data['ID']\n",
     "    similarity_results = similarity_results[['ID'] + list(input_ids)]\n",
     "    \n",
+    "    #print(similarity_results)\n",
     "    \n",
-    "    print(similarity_results)\n",
     "    # Calculate mean\n",
     "    if len(input_ids) > 1:\n",
     "        similarity_results['Mean'] = similarity_results.drop(columns=['ID']).mean(axis=1)\n",
     "        sorted_results = similarity_results.sort_values(by='Mean', ascending=True)\n",
-    "        print(sorted_results)\n",
+    "        #print(sorted_results)\n",
     "    else:\n",
     "        sorted_results = similarity_results.sort_values(by=input_ids[0], ascending=True)\n",
-    "        print(sorted_results)\n",
+    "        #print(sorted_results)\n",
     "\n",
-    "    print(sorted_results)\n",
+    "    #print(sorted_results)\n",
     "\n",
     "    # Return just a list with the best n similarities\n",
     "    best_ids = sorted_results.head(best_n)['ID'].tolist()\n",
@@ -502,89 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for testing\n",
-    "rgb_df, hsv_df, embedding_df, path_df, other_data_df = load_pickles()\n",
-    "load_embedding_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for testing\n",
-    "\n",
-    "input_images = [r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_5.jpg\"]\n",
-    "\n",
-    "input5_images = [\n",
-    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_1.jpg\",\n",
-    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_2.jpg\",\n",
-    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_3.jpg\",\n",
-    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_4.jpg\",\n",
-    "    r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_5.jpg\"\n",
-    "]\n",
-    "details_list = [extract_image_details(444668 + i + 1, path, (224,224)) for i, path in enumerate(input5_images)]\n",
-    "details_list = [features for features in details_list if features is not None]\n",
-    "df_input = pd.DataFrame(details_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "id_list = find_similar_ids(\"RGB\", \"euclidean_distance\", df_input, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[421185, 278103, 219835, 401424, 259514]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "id_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1280\n",
-      "512\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(embedding_df.iloc[0]['Embedding']))\n",
-    "print(len(rgb_df.iloc[0]['Histogram']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,19 +530,24 @@
     "def main_finding_similarities(input_images_number, measurement, similarity, best_n):\n",
     "    global rgb_df, hsv_df, embedding_df, path_df, other_data_df\n",
     "    \n",
-    "    # Load pickles\n",
-    "    rgb_df, hsv_df, embedding_df, path_df, other_data_df = load_pickles()\n",
+    "    # Load pickles (doing this outside is better for perform the main more than one time)\n",
+    "    # rgb_df, hsv_df, embedding_df, path_df, other_data_df = load_pickles()\n",
     "    \n",
+    "    specific_image_path = [r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_1.jpg\"]\n",
+    "    \n",
+    "    all_image_paths = [\n",
+    "        r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_1.jpg\",\n",
+    "        r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_2.jpg\",\n",
+    "        r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_3.jpg\",\n",
+    "        r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_4.jpg\",\n",
+    "        r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_5.jpg\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Decide which image(s)\n",
     "    if input_images_number == 1:\n",
-    "        input_images = [r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_5.jpg\"]\n",
-    "    else: \n",
-    "        input_images = [\n",
-    "            r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_1.jpg\",\n",
-    "            r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_2.jpg\",\n",
-    "            r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_3.jpg\",\n",
-    "            r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_4.jpg\",\n",
-    "            r\"C:\\Users\\timsa\\Desktop\\sample_pictures\\testing\\test_image_5.jpg\"\n",
-    "        ]\n",
+    "        input_images = specific_image_path\n",
+    "    else:\n",
+    "        input_images = all_image_paths[:input_images_number]\n",
     "    \n",
     "    #print(input_images)\n",
     "    resize_size = (224, 224)\n",
@@ -613,12 +555,21 @@
     "    \n",
     "    load_embedding_model()\n",
     "    \n",
-    "    details_list = [extract_image_details(max_id + i + 1, path, resize_size) for i, path in enumerate(input_images)]\n",
-    "    details_list = [features for features in details_list if features is not None]\n",
+    "    current_id = max_id + 1  # Start ID from the maximum existing ID + 1\n",
+    "    details_list = []\n",
+    "    \n",
+    "    for i, path in enumerate(input_images):\n",
+    "        features = extract_image_details(current_id, path, resize_size)\n",
+    "        if features is not None:\n",
+    "            details_list.append(features)\n",
+    "            current_id += 1  # Increase only if an image has been successfully read\n",
+    "    \n",
+    "    \n",
     "    df_input = pd.DataFrame(details_list)\n",
     "    #print(df_input)\n",
+    "    \n",
     "    id_list = find_similar_ids(measurement, similarity, df_input, best_n)\n",
-    "    print(id_list)\n",
+    "    #print(id_list)\n",
     "    \n",
     "    conn = sqlite3.connect(\"database/bd_database.db\")\n",
     "    curs = conn.cursor()\n",
@@ -626,7 +577,29 @@
     "    result_paths_list = get_result_paths(curs, id_list)\n",
     "    #print(result_paths_list)\n",
     "    \n",
-    "    print_images(input_images, result_paths_list, input_images_number, id_list)"
+    "    print_images(df_input, result_paths_list, id_list, best_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 2.31 s\n",
+      "Wall time: 7.68 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "global rgb_df, hsv_df, embedding_df, path_df, other_data_df\n",
+    "    \n",
+    "# Load pickles\n",
+    "rgb_df, hsv_df, embedding_df, path_df, other_data_df = load_pickles()"
    ]
   },
   {
@@ -638,7 +611,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "main_finding_similarities(1, \"Embedding\", \"euclidean_distance\", 5)\n"
+    "main_finding_similarities(1, \"RGB\", \"euclidean\", 5)"
    ]
   },
   {
@@ -657,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,28 +647,40 @@
     "        (other_data_df, 'Other_data.pkl')\n",
     "    ]\n",
     "\n",
+    "    mismatch_found = False\n",
+    "\n",
     "    # Corrects mismatches from the mismatch-position until all mismatches are gone\n",
     "    for df, filename in dataframes:\n",
+    "        corrected = False\n",
     "        while True:\n",
     "            # IDs are index + 1 always\n",
     "            expected_ids = df.index + 1\n",
     "\n",
     "            mismatch_index = (df['ID'] != expected_ids).idxmax()\n",
     "\n",
-    "            # Break if no mismatch\n",
+    "            # Decide if there was a mismatch\n",
     "            if df.loc[mismatch_index, 'ID'] == expected_ids[mismatch_index]:\n",
+    "                if corrected:\n",
+    "                    print(f\"Corrected: {filename}\")\n",
+    "\n",
+    "                    # Save only if corrections were made\n",
+    "                    with open(filename, 'wb') as f:\n",
+    "                        pickle.dump(df, f)\n",
+    "                    print(f\"Overwritten: {filename}\\n\")\n",
+    "                    first_mismatch_found = True\n",
+    "                else:\n",
+    "                    print(f\"No mismatch: {filename}\")\n",
+    "                \n",
     "                break\n",
     "\n",
     "            # Reduce all IDs - 1 beginning from the mismatch\n",
     "            df.loc[mismatch_index:, 'ID'] -= 1\n",
+    "            corrected = True\n",
     "\n",
-    "        print(f\"Corrected: {filename}\")\n",
-    "\n",
-    "        # Safe\n",
-    "        with open(filename, 'wb') as f:\n",
-    "            pickle.dump(df, f)\n",
-    "        print(f\"Overwritten: {filename}\\n\")\n",
-    "        "
+    "        # If no mismatch was found in the first file, exit the loop\n",
+    "        if not corrected and not mismatch_found:\n",
+    "            print(f\"No mismatch found in {filename}. Skipping remaining files.\")\n",
+    "            break"
    ]
   },
   {
@@ -751,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +760,7 @@
     "    np.save(f'{algorithm_name}_results.npy', df)\n",
     "\n",
     "\n",
-    "def create_clusters(df, cluster_amount=100,):\n",
+    "def create_clusters(df_to_reduce, cluster_amount=100,):\n",
     "    kmeans = KMeans(n_clusters=cluster_amount)\n",
     "    labels = kmeans.fit_predict(df_to_reduce)\n",
     "    return labels\n",
@@ -879,6 +864,18 @@
     "# %%time\n",
     "# clusters = create_clusters(df_to_reduce, 100)\n",
     "# save_dimensionality_results(clusters, \"kmeans\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Create clusters based on tsne-results\n",
+    "# %%time\n",
+    "# clusters = create_clusters(dimensions_tsne, 100)\n",
+    "# save_dimensionality_results(clusters, \"tsne_kmeans\")"
    ]
   },
   {
